--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- page 1 intro -->
-    <section id="id" class="page">
+    <section id="page-1" class="page">
       <h1>Welcome To My Presentation</h1>
 
       <p>
@@ -29,6 +29,66 @@
       <div>
         <a href="#page-2" class="btn"
           >Next Page <i class="fas fa-arrow-circle-down"></i
+        ></a>
+      </div>
+    </section>
+    <!-- page 2 intro -->
+    <section id="page-2" class="page">
+      <h1>Page 2</h1>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas est
+        sint repudiandae omnis quis eligendi nihil veritatis aperiam repellendus
+        illo accusamus nesciunt ratione, amet tenetur odio laboriosam rem
+        voluptatum quos molestiae aliquam dignissimos fugit corrupti enim.
+        Repellat alias saepe provident.
+      </p>
+
+      <div>
+        <a href="#page-1" class="btn btn-dark"
+          >Previous Page <i class="fas fa-arrow-circle-up"></i
+        ></a>
+        <a href="#page-3" class="btn"
+          >Next Page <i class="fas fa-arrow-circle-down"></i
+        ></a>
+      </div>
+    </section>
+    <!-- page 3 intro -->
+    <section id="page-3" class="page">
+      <h1>Page 3</h1>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas est
+        sint repudiandae omnis quis eligendi nihil veritatis aperiam repellendus
+        illo accusamus nesciunt ratione, amet tenetur odio laboriosam rem
+        voluptatum quos molestiae aliquam dignissimos fugit corrupti enim.
+        Repellat alias saepe provident.
+      </p>
+
+      <div>
+        <a href="#page-2" class="btn btn-dark"
+          >Previous Page <i class="fas fa-arrow-circle-up"></i
+        ></a>
+        <a href="#page-4" class="btn"
+          >Next Page <i class="fas fa-arrow-circle-down"></i
+        ></a>
+      </div>
+    </section>
+    <!-- page 4 intro -->
+    <section id="page-4" class="page">
+      <h1>Page 4</h1>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas est
+        sint repudiandae omnis quis eligendi nihil veritatis aperiam repellendus
+        illo accusamus nesciunt ratione, amet tenetur odio laboriosam rem
+        voluptatum quos molestiae aliquam dignissimos fugit corrupti enim.
+        Repellat alias saepe provident.
+      </p>
+
+      <div>
+        <a href="#page-3" class="btn"
+          >Previous Page <i class="fas fa-arrow-circle-up"></i
         ></a>
       </div>
     </section>
